# WGT-House_Prices

./: .gitignore  README.md  dvc.yaml  pyproject.toml  run.py  scripts.sh
.dvc/: config
data/: .gitignore  data_description.txt.dvc  sample_submission.csv.dvc
scripts/: descriptive_statistcis.ipynb  descriptive_statistcis_feature_eng.ipynb  feature_engineering.ipynb  feature_engineering.py  train.ipynb  train.py  unzip_data.py
