[tool.poetry]
name = "wgt-house_prices"
version = "0.1.0"
description = "Kaggle project House prices regression"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
