[tool.poetry]
name = "wgt-house_prices"
version = "0.1.0"
description = "Kaggle project House prices regression"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
kaggle = "^1.5.12"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
